# ERICCa

./: .gitignore  LICENSE  README.md  Startup_test.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
Baseline_Code_Jupyter_Notebook/: EMSigma.py  EMSigma_3_24_26.py  EMSigma_3_31_26.py  EMSigma_4_11_26.py  EMSigma_4_9_26.py  EMSigma_Tutorial.ipynb  EMSigma_baseline.py  Profile_function.py  Startup_test.py  Updated_code_tester_3_24_26.ipynb  Updated_code_tester_3_31_26.ipynb  Updated_code_tester_4_11_26.ipynb  Updated_code_tester_4_28_26.ipynb  Updated_code_tester_4_9_26.ipynb  _init_.py  cross_sections.py  new_profile_funct_params.txt  profile_funct_param_matter.txt
Baseline_Code_Jupyter_Notebook/Benchmarked_codes/: EMSigma_2_24_26.py  EMSigma_3_13_26.py  EMSigma_3_20_26 copy.py  EMSigma_3_4_26.py  EMSigma_3_5_26.py  Updated_code_tester_3_11_26.ipynb  Updated_code_tester_3_20_26.ipynb  Updated_code_tester_3_24_26.ipynb  Updated_code_tester_3_31_26.ipynb  Updated_code_tester_4_11_26.ipynb  Updated_code_tester_4_9_26.ipynb
Baseline_Code_Jupyter_Notebook/Benchmarked_codes/Densities/: Density.py
Baseline_Code_Jupyter_Notebook/Cor_dens_Update/Cor_Ca_C_Mass_dens/: 12Crho-mass.txt  40Carho-mass.txt  42Ca_radius.txt  42Carho-neut.txt  42Carho-prot.txt  44Carho-mass.txt  48Carho-prot.txt  52Carho-neut.txt  53Carho-mass.txt  54Carho-mass.txt  55Carho-neut.txt  56Carho-neut.txt  59Ca_radius.txt
Baseline_Code_Jupyter_Notebook/ERICCa_package/: README.md  pyproject.toml
Baseline_Code_Jupyter_Notebook/ERICCa_package/src/ERICCA/: cross_sections.py
ERICCa_package/: README.md
ERICCa_package/src/ERICCA/: cross_sections.py
Example/: ERICCa_Tutorial.ipynb
Example/Cor_dens_Update/Cor_Ca_C_Mass_dens/: 12C_radius.txt  45Carho-neut.txt
Tutorials/: ERICCa_TLDR.ipynb  ERICCa_Tutorial.ipynb
Tutorials/Cor_dens_Update/Cor_Ca_C_Mass_dens/: 12Crho-prot.txt
docs/: conf.py  index.rst  installation.rst
docs/api/: cross_sections.rst  density.rst  index.rst  profile_function.rst
src/ERICCA/: Density.py  Profile_function.py  __init__.py  __version__.py  baseline.py  cross_sections.py  density.py  profile_function.py
tests/: Startup_test.py  conftest.py  test_startup.py
tutorials/: ERICCa_TLDR.ipynb  ERICCa_Tutorial.ipynb
tutorials/Cor_dens_Update/Cor_Ca_C_Mass_dens/: 12Crho-neut.txt  41Carho-neut.txt  43Carho-mass.txt  57Carho-mass.txt  58Carho-prot.txt
