[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ERICCa"
authors = [
  {name="Andrew John Smith", email="smithan@frib.msu.edu"}
]
description = "A nuclear reaction code that calculates nucleus-nucleus reaction cross section in the eikonal framework"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dynamic = ["dependencies", "version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/ERICCA/__version__.py"