[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ERICCa"
authors = [
  {name="Kyle Godbey"},
  {name="Andrew John Smith", email="smithan@frib.msu.edu"}
]
description = "A nuclear reaction code that calculates nucleus-nucleus reaction cross section in the eikonal framework"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
dynamic = ["dependencies", "version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7",
    "furo",
    "sphinx-autodoc-typehints",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ERICCA = ["*.txt"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/ERICCA/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that run full sigma_R computations (several seconds each)",
]
